[package]
name = "clapboard"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdg = "2.5.2"
toml = { version = "0.8.20", default-features = false, features = ["parse"] }
wl-clipboard-rs = "0.9.1"
wayland-clipboard-listener = "0.2.6"
clap = { version = "4.5.31", features = ["derive"] }
