[package]
name = "clapboard"
version = "1.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdg = "2.5.2"
wl-clipboard-rs = "0.9.1"
wayland-clipboard-listener = "0.2.6"
clap = { version = "4.5.31", features = ["derive"] }
basic-toml = "0.1.9"
serde = { version = "1.0.218", features = ["derive"] }
indexmap = "2.9.0"
