[package]
name = "clapboard"
version = "1.0.5"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdg = "2.5.2"
toml = "0.8.22"
wl-clipboard-rs = "0.9.2"
wayland-clipboard-listener = "0.2.6"
clap = { version = "4.5.39", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
indexmap = { version = "2.9.0", features = ["std"] }
